Source/Backend/Envoy/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 4321
static_resources:
  listeners:
    - name: gala_services_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: gala_services_route
                  virtual_hosts:
                    - name: gala_services_backend
                      domains: [ "*" ]
                      routes:
                        - match:
                            prefix: "/package"
                          route:
                            auto_host_rewrite: true
                            cluster: package
                        - match:
                            prefix: "/family"
                          route:
                            auto_host_rewrite: true
                            cluster: family
                        - match:
                            prefix: "/user"
                          route:
                            auto_host_rewrite: true
                            cluster: identity
                        - match:
                            prefix: "/parameter"
                          route:
                            auto_host_rewrite: true
                            cluster: parameter

  clusters:
    - name: identity
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: identity
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: gala-identity
                      port_value: 80
      load_balancing_policy:
        policies:
          - typed_extension_config:
              name: envoy.load_balancing_policies.round_robin
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.load_balancing_policies.round_robin.v3.RoundRobin
                
    - name: family
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: family
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: gala-family
                      port_value: 80
      load_balancing_policy:
        policies:
          - typed_extension_config:
              name: envoy.load_balancing_policies.round_robin
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.load_balancing_policies.round_robin.v3.RoundRobin
                
    - name: package
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: package
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: gala-package
                      port_value: 80
      load_balancing_policy:
        policies:
          - typed_extension_config:
              name: envoy.load_balancing_policies.round_robin
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.load_balancing_policies.round_robin.v3.RoundRobin

    - name: parameter
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: parameter
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: gala-parameter
                      port_value: 80
      load_balancing_policy:
        policies:
          - typed_extension_config:
              name: envoy.load_balancing_policies.round_robin
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.load_balancing_policies.round_robin.v3.RoundRobin
